examples/test/testpolicy8672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8672
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value39
      podSelector:
        matchLabels:
          key26: value45
          key37: value0
          key8: value38
